@@ -1,3 +1,7 @@
+Thu Feb 16 15:54:48 2006  Søren Sandmann  <sandmann@redhat.com>
+
+	* src/compositor.c: Insert #ifdef's to make it build again
+
 Wed Feb 15 18:42:03 2006  Søren Sandmann  <sandmann@redhat.com>
 
 	* src/compositor.[ch]: Add code to destroy compositor. Implement
